# hu-assignments

./: .gitignore
bbm203/assignment1/inputs/: input2.txt
bbm203/assignment1/src/: CMakeLists.txt  ClassificationYard.cpp  RailMarshal.cpp  Train.cpp  TrainTrack.cpp  WagonList.cpp  makefile
bbm203/assignment2/src/: RequestQueue.cpp  Team.cpp  main.cpp
bbm203/assignment3/expected-outputs/: expected_output.txt
bbm203/assignment3/src/: Artifact.cpp  ArtifactManager.cpp
term3/bbm203/assignment1/expected-outputs/: output2.txt
term3/bbm203/assignment1/src/: ClassificationYard.cpp  RailMarshal.cpp  Train.h  TrainTrack.cpp  WagonList.cpp  WagonList.h  makefile
term3/bbm203/assignment2/src/: MissionStack.cpp  QuakeAssistController.cpp  Request.cpp
term3/bbm203/assignment3/src/: AVLTree.cpp  RedBlackTree.cpp  Researcher.cpp
term4/bbm204/assignment1/src/: Main.java
term4/bbm204/assignment2/src/: DiagnosticCatalogue.java  DiagnosticRequest.java  MediPlanDP.java
